fix hover place-img

--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
                     <!-- place -->
                     <div class="row place-list">
                         <div class="col place-item s-col-full mt-16">
-                            <img src="./assets/img/slider/place1.jpg" alt="New York" class="place-img">
+                            <div class="place-img-wrap">
+                                <img src="./assets/img/slider/place1.jpg" alt="New York" class="place-img">
+                            </div>
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
                                 <p class="place-time">Tue 12 July, 14:00 BST: Liverpool</p>
@@ -102,7 +104,9 @@
                             </div>
                         </div>
                         <div class="col place-item s-col-full mt-16">
-                            <img src="./assets/img/slider/place2.jpg" alt="New York" class="place-img">
+                            <div class="place-img-wrap">
+                                <img src="./assets/img/slider/place2.jpg" alt="New York" class="place-img">
+                            </div>
                             <div class="place-body">
                                 <h3 class="place-heading">Paris</h3>
                                 <p class="place-time">Sat 23 July, 10:45 BST: Aston Villa</p>
@@ -111,7 +115,9 @@
                             </div>
                         </div>
                         <div class="col place-item s-col-full mt-16">
-                            <img src="./assets/img/slider/place3.jpg" alt="New York" class="place-img">
+                            <div class="place-img-wrap">
+                                <img src="./assets/img/slider/place3.jpg" alt="New York" class="place-img">
+                            </div>
                             <div class="place-body">
                                 <h3 class="place-heading">San Francisco</h3>
                                 <p class="place-time">Sat 30 July, 13:00 BST: Atletico Madrid</p>
